# RustMediaServer

./: .gitignore  Cargo.toml  README.md  test_devices.ps1
config/: Linkplay-WiiM.conf
resources/: connection_manager_scpd.xml  content_directory_scpd.xml  description.xml  media_receiver_registrar_scpd.xml
src/: error.rs  logging.rs  main.rs  state.rs
src/configuration/: renderer.rs
src/discovery/: mod.rs  registry.rs  ssdp.rs
src/transcoding/: mod.rs  transcoder.rs
src/upnp/: dlna_helper.rs  mod.rs  soap.rs
